gke/2-ingressroute/lego-ingress.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: lego
  namespace: lego
  labels:
    app: lego
spec:
  routes:
  - match: /lego
    services:
    - name: lego-v1
      port: 80
