gke/2-ingressroute/santa-delegate-all.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: root-santa
  namespace: santa
  labels:
    app: root-santa
spec:
  virtualhost:
    fqdn: santa.local
    tls:
      secretName: tls-santa
  routes:
  - match: /
    services:
    - name: santa-v1
      port: 80
  - match: /lego
    delegate:
      name: lego
      namespace: lego
  - match: /blog
    delegate:
      name: lego-blog
      namespace: lego
  - match: /playmo
    delegate:
      name: playmo
      namespace: playmo
