gke/2-ingressroute/santa-ingress.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: root-santa
  namespace: santa
  labels:
    app: root-santa
spec:
  virtualhost:
    fqdn: santa.local
    tls:
      secretName: tls-santa
  routes:
  - match: /
    services:
    - name: santa-v1
      port: 80
